--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <section id="business_introduce">
                 <h2 data-aos="fade-up" data-aos-duration="1000">기대 이상의 결과물로 혁신을 제공하는 <br> 콘토피아의 사업을
                     소개합니다.</h2>
-                <div class="business_menu_wrap" data-aos="fade-up" data-aos-duration="1000">
+                <div class="business_menu_wrap" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                     <ul class="business_menu">
                         <li>
                             <div class="title">
@@ -243,7 +243,7 @@
             <section id="portfolio">
                 <h2 data-aos="fade-up" data-aos-duration="1000">최고의 품질과 전문성을 보장합니다.</h2>
                 <ul class="img_wrap" oncontextmenu="return false" data-aos="fade-up" data-aos-duration="1000">
-                    <li data-aos="fade-up" data-aos-duration="1000">
+                    <li data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                         <a href="sub/portfolio/detail/18_film.html">
                             <div class="preview">
                                 <span></span><span></span><span></span><span></span>
@@ -253,7 +253,7 @@
                             <p>홍보</p>
                         </a>
                     </li>
-                    <li data-aos="fade-up" data-aos-duration="1000">
+                    <li data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                         <a href="sub/portfolio/detail/17_film.html">
                             <div class="preview">
                                 <span></span><span></span><span></span><span></span>
@@ -263,7 +263,7 @@
                             <p>홍보</p>
                         </a>
                     </li>
-                    <li data-aos="fade-up" data-aos-duration="1000">
+                    <li data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                         <a href="sub/portfolio/detail/16_film.html">
                             <div class="preview">
                                 <span></span><span></span><span></span><span></span>
@@ -273,7 +273,7 @@
                             <p>홍보</p>
                         </a>
                     </li>
-                    <li data-aos="fade-up" data-aos-duration="1000">
+                    <li data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                         <a href="sub/portfolio/detail/15_film.html">
                             <div class="preview">
                                 <span></span><span></span><span></span><span></span>
@@ -283,7 +283,7 @@
                             <p>홍보</p>
                         </a>
                     </li>
-                    <li data-aos="fade-up" data-aos-duration="1000">
+                    <li data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                         <a href="sub/portfolio/detail/14_film.html">
                             <div class="preview">
                                 <span></span><span></span><span></span><span></span>
@@ -293,7 +293,7 @@
                             <p>홍보</p>
                         </a>
                     </li>
-                    <li data-aos="fade-up" data-aos-duration="1000">
+                    <li data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                         <a href="sub/portfolio/detail/13_film.html">
                             <div class="preview">
                                 <span></span><span></span><span></span><span></span>
@@ -303,7 +303,7 @@
                             <p>홍보</p>
                         </a>
                     </li>
-                    <li data-aos="fade-up" data-aos-duration="1000">
+                    <li data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                         <a href="sub/portfolio/detail/12_film.html">
                             <div class="preview">
                                 <span></span><span></span><span></span><span></span>
@@ -313,7 +313,7 @@
                             <p>홍보</p>
                         </a>
                     </li>
-                    <li data-aos="fade-up" data-aos-duration="1000">
+                    <li data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                         <a href="sub/portfolio/detail/11_film.html">
                             <div class="preview">
                                 <span></span><span></span><span></span><span></span>
@@ -323,7 +323,7 @@
                             <p>교육</p>
                         </a>
                     </li>
-                    <li data-aos="fade-up" data-aos-duration="1000">
+                    <li data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                         <a href="sub/portfolio/detail/10_film.html">
                             <div class="preview">
                                 <span></span><span></span><span></span><span></span>
@@ -333,7 +333,7 @@
                             <p>스케치</p>
                         </a>
                     </li>
-                    <li data-aos="fade-up" data-aos-duration="1000">
+                    <li data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                         <a href="sub/portfolio/detail/09_film.html">
                             <div class="preview">
                                 <span></span><span></span><span></span><span></span>
@@ -343,7 +343,7 @@
                             <p>스케치</p>
                         </a>
                     </li>
-                    <li data-aos="fade-up" data-aos-duration="1000">
+                    <li data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                         <a href="sub/portfolio/detail/08_film.html">
                             <div class="preview">
                                 <span></span><span></span><span></span><span></span>
@@ -353,7 +353,7 @@
                             <p>홍보</p>
                         </a>
                     </li>
-                    <li data-aos="fade-up" data-aos-duration="1000">
+                    <li data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                         <a href="sub/portfolio/detail/07_film.html">
                             <div class="preview">
                                 <span></span><span></span><span></span><span></span>
@@ -371,7 +371,7 @@
         </main>
         <section id="marquee">
             <h2 data-aos="fade-up" data-aos-duration="1000">다양한 가치를 가진 기업의 여정에 함께 하겠습니다.</h2>
-            <div class="marquee_wrap"  data-aos="fade-up" data-aos-duration="1000">
+            <div class="marquee_wrap"  data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                 <div class="marquee-top">
                     <ul class="track">
                         <li><img src="images/main/Frame-4420.png" alt=""></li>
@@ -424,7 +424,7 @@
 
         <section id="notice">
             <h2 data-aos="fade-up" data-aos-duration="1000">새로운 소식을 빠르게 만날 수 있습니다.</h2>
-            <ul class="notice_list" data-aos="fade-up" data-aos-duration="1000">
+            <ul class="notice_list" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                 <li>
                     <a href="sub/promotion/detail/02_post.html">
                         <strong class="category">공지사항</strong>
