--- a/sub/company.html
+++ b/sub/company.html
@@ -144,8 +144,7 @@
                 <h5>회사개요</h5>
                 <div>
                     <h2>
-                        혁신적인 기술과 창의적인 아이디어를 기반으로
-                        <br> 고객들에게 가치를 제공하는 Contopia입니다.
+                        혁신적인 기술과 창의적인 아이디어를 기반으로 고객들에게 가치를 제공하는 Contopia입니다.
                     </h2>
                     <p>
                         우리는 첨단 기술을 활용하여 산업을 혁신시키고, 디지털 시대의 요구에 부응하는 다양한 제품과 서비스를 제공합니다.
