--- a/sub/business.html
+++ b/sub/business.html
@@ -16,10 +16,12 @@
     <link rel="stylesheet" href="../css/business.css">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- js -->
     <script src="../js/jquery-3.7.1.min.js"></script>
     <script src="../js/header.js"></script>
     <script src="../js/typed.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
 
 <body>
@@ -140,14 +142,14 @@
         <!-- visual_banner -->
 
         <section id="business">
-            <h2>하나의 프로젝트를 완성하기 위해 <br> 디테일한 부분까지 <span>집중</span>하고 <span>몰입</span>하여 <br> <span>완벽함을 만들어 냅니다.</span></h2>
+            <h2 data-aos="fade-up" data-aos-duration="1000">하나의 프로젝트를 완성하기 위해 <br> 디테일한 부분까지 <span>집중</span>하고 <span>몰입</span>하여 <br> <span>완벽함을 만들어 냅니다.</span></h2>
             <div class="business_wrap">
                 <ul>
                     <li id="video">
-                        <div>
+                        <div data-aos="fade-right" data-aos-duration="1000" data-aos-delay="100" data-aos-offset="200">
                             <img src="../images/main/business_introduce1.jpg" alt="영상제작">
                         </div>
-                        <div class="text_box">
+                        <div class="text_box" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100" data-aos-offset="200">
                             <h2>영상 콘텐츠 제작</h2>
                             <p>스토리보드, 영상편집, 후속 관리까지 전반적인 제작 과정을 수행합니다. 고객의 요구와 목적에 맞게 고품질의 비주얼 콘텐츠를 제공하여 브랜드 인지도 향상, 마케팅 전략 강화, 정보 전달 등 다양한 목적을 달성합니다. 콘토피아는 디지털 기술의 발전과 시장의 다양한 요구에 빠르게 대응하며, 고객과 시청자들에게 가치 있는 경험을 제공하고자 합니다.</p>
                             <div class="portfolio_btn">
@@ -156,7 +158,7 @@
                         </div>
                     </li>
                     <li id="event">
-                        <div class="text_box">
+                        <div class="text_box" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100" data-aos-offset="200">
                             <h2>온·오프라인 행사</h2>
                             <p>고객의 목표와 요구사항을 바탕으로 행사의 전반적인 기획, 장소 선정, 참가자 관리, 프로모션, 운영 및 후속 관리까지 종합적으로 지원합니다.
                                 고객의 브랜드 인지도 향상, 커뮤니케이션 강화, 타켓 오디언스와의 연결을 위해 전문적이고 창의적인 행사를 제공합니다.</p>
@@ -164,15 +166,15 @@
                                     <a href="event_pf.html">포트폴리오 바로가기</a>
                                 </div>
                         </div>
-                        <div>
+                        <div data-aos="fade-left" data-aos-duration="1000" data-aos-delay="100" data-aos-offset="200">
                             <img src="../images/main/business_introduce2.jpg" alt="오프라인 행사">
                         </div>
                     </li>
                     <li id="marketing">
-                        <div>
+                        <div data-aos="fade-right" data-aos-duration="1000" data-aos-delay="100" data-aos-offset="200">
                             <img src="../images/main/business_introduce4.jpg" alt="홍보 및 마케팅">
                         </div>
-                        <div class="text_box">
+                        <div class="text_box" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100" data-aos-offset="200">
                             <h2>홍보 및 마케팅</h2>
                             <p>기업이나 브랜드의 가치를 대중에게 전달하고 홍보하는 활동을 전문적으로 수행합니다. 타켓 오디언스를 분석하고, 전략전인 커뮤니케이션 계획을 세우며, 다양한 미디어 체널을 활용하여 광고, PR, 소셜 미디어 마케팅 등을 실행합니다. 콘토리아는 디지털 트랜드 변화에 빠르게 대응하며, 데이터 기반의 마케팅 전략을 강화해 나갈 것 입니다.</p>
                             <div class="portfolio_btn">
@@ -229,6 +231,8 @@
         <!-- footer_E -->
     </div>
     <script>
+        // aos
+        AOS.init();
         // contact_banner_typing
         var ContactOptions = {
             stringsElement: '#contact_banner .title',
