--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
                         </div>
                     </li>
                     <li>
-                        <a href="sub/video_pf.html">포트폴리오</a>
+                        <a href="sub/pf_video.html">포트폴리오</a>
                         <div class="submenu_wrap">
                             <div class="submenu">
                                 <ul>
-                                    <li><a href="sub/video_pf.html">영상 콘텐츠 제작</a></li>
-                                    <li><a href="sub/event_pf.html">온·오프라인 행사</a></li>
-                                    <li><a href="sub/marketing_pf.html">홍보 및 마케팅</a></li>
+                                    <li><a href="sub/pf_video.html">영상 콘텐츠 제작</a></li>
+                                    <li><a href="sub/pf_event.html">온·오프라인 행사</a></li>
+                                    <li><a href="sub/pf_marketing.html">홍보 및 마케팅</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -119,11 +119,11 @@
                                 </li>
                                 <li>
                                     <button></button>
-                                    <a href="sub/video_pf.html">포트폴리오</a>
+                                    <a href="sub/pf_video.html">포트폴리오</a>
                                     <ul class="m_submenu">
-                                        <li><a href="sub/video_pf.html">영상 콘텐츠 제작</a></li>
-                                        <li><a href="sub/event_pf.html">온·오프라인 행사</a></li>
-                                        <li><a href="sub/marketing_pf.html">홍보 및 마케팅</a></li>
+                                        <li><a href="sub/pf_video.html">영상 콘텐츠 제작</a></li>
+                                        <li><a href="sub/pf_event.html">온·오프라인 행사</a></li>
+                                        <li><a href="sub/pf_marketing.html">홍보 및 마케팅</a></li>
                                     </ul>
                                 </li>
                                 <li>
@@ -365,7 +365,7 @@
                     </li>
                 </ul>
                 <div class="portfolio_btn" data-aos="fade-right" data-aos-duration="1000">
-                    <a href="sub/video_pf.html">포트폴리오 바로가기</a>
+                    <a href="sub/pf_video.html">포트폴리오 바로가기</a>
                 </div>
             </section>
         </main>
