--- a/sub/history.html
+++ b/sub/history.html
@@ -184,13 +184,13 @@
                                 <li>
                                     <h2>12</h2>
                                     <div>
-                                        <p>'Hilightopia(하이라이토피아)' 소프트웨어 공인인증서 발급 완료</p>
+                                        <p>'Hilightopia(하이라이토피아)' 소프트웨어 공인시험성적서 발급 완료</p>
                                         <p>'Hilightopia(하이라이토피아)' 저작권 등록</p>
                                         <p>'콘토피아' 상표 등록</p>
                                         <p>'비즈니스 영상명함 제작 및 관리 서비스 제공 시스템' 특허 등록</p>
                                         <p>과학기술정보통신부장관상 수상(유망 SaaS 개발)</p>
                                         <p>유망 SaaS 육성/개발 사업 우수기업 선정</p>
-                                        <p>(KACI)클라우드 서비스 확인서 발급 완료</p>
+                                        <p>(KACI)클라우드 서비스 확인서 발급</p>
                                     </div>
                                 </li>
                                 <li>
@@ -239,7 +239,7 @@
                                         <p>일자리 창출 유공 해운대구청장 표창​</p>
                                         <p>B-Investment Show IR피칭 대회 창업진흥원장상 대상 수상​</p>
                                         <p>온라인 실시간 중계 콘텐츠 하이라이트 영상 자동 제작 솔루션 저작권 등록​</p>
-                                        <p>온라인 실시간 중계 콘텐츠 하이라이트 영상 자동 제작 솔루션 v0.0.1-beta 시험성적서</p>
+                                        <p>온라인 실시간 중계 콘텐츠 하이라이트 영상 자동 제작 솔루션 v0.0.1-beta 시험성적서 발급</p>
                                     </div>
                                 </li>
                                 <li>
