--- a/sub/history.html
+++ b/sub/history.html
@@ -184,7 +184,7 @@
                                 <li>
                                     <h2>12</h2>
                                     <div>
-                                        <p>'Hilightopia(하이라이토피아)' 소프트웨어 공인시험성적서 발급 완료</p>
+                                        <p>'Hilightopia(하이라이토피아)' 소프트웨어 공인시험성적서 발급</p>
                                         <p>'Hilightopia(하이라이토피아)' 저작권 등록</p>
                                         <p>'콘토피아' 상표 등록</p>
                                         <p>'비즈니스 영상명함 제작 및 관리 서비스 제공 시스템' 특허 등록</p>
